# research_summary

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  SPRINT_PLAN.md  fix_db_issue.py  pyproject.toml
aipod/: __init__.py
aipod/cli/: __init__.py  app.py  init.py  open.py  run.py  sources.py
aipod/config/: __init__.py  loader.py  models.py
aipod/db/: __init__.py  articles.py  connection.py  init.py  runs.py  sources.py
aipod/generation/: __init__.py  llm_provider.py  models.py  script.py  show_notes.py
aipod/ingestion/: __init__.py  article_fetcher.py  models.py  rss_fetcher.py
aipod/models/: __init__.py  article.py  base.py  cluster.py  run.py  source.py
aipod/pipeline/: __init__.py  orchestrator.py
aipod/ranking/: __init__.py  models.py  ranker.py  scorers.py
